# auto_spoiler

./: .env  Cargo.toml  README.md  spoiler.sqlite
migrations/: 20230903020138_init.down.sql  20230903020138_init.up.sql
src/: auto_spoiler.rs  database.rs  interaction.rs  main.rs  webhooks.rs
src/database/: insert_custom_word.sql  insert_default_word.sql  query_words.sql
src/interaction/: add_custom_word.rs  add_default_word.rs  allow.rs  custom_word.rs  tag.rs  tw.rs
