[package]
name = "auto_spoiler"
description = "a discord bot that automatically puts possibly triggering words in spoilers"
version = "0.1.0"
authors = ["laralove143 <laralove143@icloud.com>"]
repository = "https://github.com/laralove143/spoiler-bot"
license = "MIT"
edition = "2021"
keywords = ["discord", "bots"]
categories = ["http-client"]

[dependencies]
twilight-gateway = { version = "0.11", default-features = false, features = [
    "rustls-native-roots",
    "zlib-simd",
] }
twilight-http = { version = "0.11", default-features = false, features = [
    "decompression",
    "rustls-native-roots",
    "trust-dns",
] }
twilight-model = { version = "0.11", default-features = false }
twilight-util = { version = "0.11", default-features = false, features = [
    "builder",
] }
twilight-cache-inmemory = { version = "0.11", features = [
    "permission-calculator"
] }
twilight-interactions = "0.11"
twilight-webhook = "0.11"
tokio = { version = "1.17.0", default-features = false, features = [
    "rt-multi-thread",
    "macros"
] }
sqlx = { version = "0.6", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "postgres"
] }
futures-util = "0.3"
anyhow = "1.0"
